# quantus-nlp

./: .dvcignore  .gitignore  README.md  dataset.dvc  model.dvc  pyproject.toml  tox.ini
.dvc/: config
gcloud/: connect_to_node.sh  create_tpu.sh  download_model.sh  upload_dataset.sh
notebooks/: demo_predictions.ipynb  lit_demo.ipynb  xai_demo.ipynb
quantus_nlp/: __init__.py  main.py
quantus_nlp/bert/: __init__.py  model.py
quantus_nlp/data/: __init__.py  dataset.py  go_emotions.py  pre_processing.py
quantus_nlp/examples/: dataset.py  main.py  model.py
quantus_nlp/metrics/: ris.py
quantus_nlp/models/: bert.py
quantus_nlp/util/: log.py  util.py
quantus_nlp/xai/: lime.py  lit.py  metric.py
quantus_text/: util.py
quantus_text/examples/: main.py  model.py
quantus_text/interfaces/: interfaces.py
quantus_text/metrics/: ris.py
quantus_text/xai/: lime.py
tests/: test_quantus_nlp.py
