[tool.poetry]
name = "quantus-nlp"
version = "0.1.0"
description = ""
authors = ["Artem Sereda <Aitem1503@icloud.com>"]

[tool.poetry.dependencies]
python = "3.9"
tensorflow = "^2.9.1"
tensorflow-datasets = "^4.6.0"
tensorflow-text = "^2.9.0"
tensorflow-hub = "^0.12.0"
lit-nlp = "^0.4.1"
tensorflow-addons = "^0.17.1"
black = "^22.6.0"
jax = "^0.3.14"
dvc = "^2.13.0"
click = "^8.1.3"
flake8 = "^4.0.1"
jaxlib = "^0.3.14"
flax = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
