[tool.poetry]
name = "quantus-nlp"
version = "0.1.0"
description = ""
authors = ["Artem Sereda <artem.sereda@campus.tu-berlin.de>"]

[tool.poetry.dependencies]

python = "3.9"
jax = "^0.3.14"
nlpaug = "^1.1.11"
nltk = "^3.7"



[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

tensorflow = "^2.9.1"
tensorflow-datasets = "^4.6.0"
tensorflow-text = "^2.9.0"
tensorflow-hub = "^0.12.0"

black = "^22.6.0"
flake8 = "^4.0.1"

matplotlib = "^3.5.2"
jupyter = "^1.0.0"

click = "^8.1.3"
dvc = "^2.13.0"
tqdm = "^4.64.0"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
